[gd_scene load_steps=16 format=3 uid="uid://saalq7t3ky2f"]

[ext_resource type="Script" uid="uid://c5qukyhtn6olp" path="res://Scripts/Player.gd" id="1_kyqiw"]
[ext_resource type="Texture2D" uid="uid://byoo8cgqmp2nq" path="res://Assets/hide.png" id="2_dewec"]
[ext_resource type="Texture2D" uid="uid://bjpcq27vp8w4b" path="res://Assets/pufferfish.png" id="3_5ixxa"]
[ext_resource type="Texture2D" uid="uid://djxu684embvmm" path="res://Assets/shellless.png" id="3_dewec"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dewec"]
size = Vector2(28, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_bhhdu"]
atlas = ExtResource("2_dewec")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_megsn"]
atlas = ExtResource("2_dewec")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_glx4g"]
atlas = ExtResource("3_5ixxa")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_yoq75"]
atlas = ExtResource("2_dewec")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ksbbd"]
atlas = ExtResource("3_dewec")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_h0an2"]
atlas = ExtResource("3_5ixxa")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rfj3c"]
atlas = ExtResource("3_5ixxa")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_w3khe"]
atlas = ExtResource("3_5ixxa")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qsqrp"]
atlas = ExtResource("3_5ixxa")
region = Rect2(96, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_bhhdu"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bhhdu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_megsn")
}],
"loop": false,
"name": &"hide",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_glx4g")
}],
"loop": true,
"name": &"pufferfish",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_yoq75")
}],
"loop": true,
"name": &"shelled",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ksbbd")
}],
"loop": true,
"name": &"shellless",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_h0an2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rfj3c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w3khe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qsqrp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h0an2")
}],
"loop": false,
"name": &"shoot",
"speed": 5.0
}]

[node name="Player" type="CharacterBody2D" groups=["button_pushers"]]
collision_layer = 3
collision_mask = 3
script = ExtResource("1_kyqiw")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_dewec")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_bhhdu")
animation = &"hide"

[node name="Camera2D" type="Camera2D" parent="."]

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_dewec")

[node name="Marker2D" type="Marker2D" parent="."]

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="frame_changed" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_frame_changed"]
[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
